[gd_scene load_steps=40 format=3 uid="uid://8wqxwv1v5an2"]

[ext_resource type="Script" uid="uid://cqt5n65ij2ijg" path="res://boss.gd" id="1_ymd2q"]
[ext_resource type="Texture2D" uid="uid://4rtpxqmr3dy7" path="res://Sprites/Cat-Sheet.png" id="2_cf251"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xxrv"]
size = Vector2(30, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0aspn"]
size = Vector2(36, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8lr2"]
size = Vector2(33, 20.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xxrv"]
atlas = ExtResource("2_cf251")
region = Rect2(96, 1248, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skx2t"]
atlas = ExtResource("2_cf251")
region = Rect2(96, 1280, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnbgr"]
atlas = ExtResource("2_cf251")
region = Rect2(64, 1248, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1i15"]
atlas = ExtResource("2_cf251")
region = Rect2(64, 1280, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_we8h1"]
atlas = ExtResource("2_cf251")
region = Rect2(64, 1344, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf251"]
atlas = ExtResource("2_cf251")
region = Rect2(0, 1088, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0aspn"]
atlas = ExtResource("2_cf251")
region = Rect2(0, 1056, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_se7i0"]
atlas = ExtResource("2_cf251")
region = Rect2(32, 1120, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8lr2"]
atlas = ExtResource("2_cf251")
region = Rect2(64, 1120, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbxgy"]
atlas = ExtResource("2_cf251")
region = Rect2(96, 1120, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv8hl"]
atlas = ExtResource("2_cf251")
region = Rect2(64, 1184, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymd2q"]
atlas = ExtResource("2_cf251")
region = Rect2(192, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2w4t"]
atlas = ExtResource("2_cf251")
region = Rect2(224, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfyxt"]
atlas = ExtResource("2_cf251")
region = Rect2(160, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl46a"]
atlas = ExtResource("2_cf251")
region = Rect2(128, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q1cu"]
atlas = ExtResource("2_cf251")
region = Rect2(96, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nban"]
atlas = ExtResource("2_cf251")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef0k6"]
atlas = ExtResource("2_cf251")
region = Rect2(0, 1024, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry61v"]
atlas = ExtResource("2_cf251")
region = Rect2(0, 992, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kles1"]
atlas = ExtResource("2_cf251")
region = Rect2(32, 992, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etj48"]
atlas = ExtResource("2_cf251")
region = Rect2(64, 992, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3lj5"]
atlas = ExtResource("2_cf251")
region = Rect2(96, 992, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s1j2"]
atlas = ExtResource("2_cf251")
region = Rect2(32, 1024, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_km2bi"]
atlas = ExtResource("2_cf251")
region = Rect2(64, 1024, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0duv"]
atlas = ExtResource("2_cf251")
region = Rect2(96, 1024, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbqjd"]
atlas = ExtResource("2_cf251")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp83"]
atlas = ExtResource("2_cf251")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n0rj"]
atlas = ExtResource("2_cf251")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dwyo"]
atlas = ExtResource("2_cf251")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhwyx"]
atlas = ExtResource("2_cf251")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpunu"]
atlas = ExtResource("2_cf251")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u80mq"]
atlas = ExtResource("2_cf251")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35r5t"]
atlas = ExtResource("2_cf251")
region = Rect2(224, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_se7i0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xxrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skx2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnbgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1i15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we8h1")
}],
"loop": true,
"name": &"channeling",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf251")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aspn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se7i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8lr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbxgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv8hl")
}],
"loop": false,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymd2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2w4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfyxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl46a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q1cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nban")
}],
"loop": false,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef0k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry61v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kles1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etj48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3lj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s1j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km2bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0duv")
}],
"loop": true,
"name": &"sleep",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbqjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n0rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dwyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhwyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpunu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u80mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35r5t")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[node name="Boss" type="RigidBody2D"]
script = ExtResource("1_ymd2q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_6xxrv")

[node name="Damage_hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage_hitbox"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_0aspn")

[node name="Kill_hitbox" type="Area2D" parent="."]
position = Vector2(13, -13)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill_hitbox"]
position = Vector2(-13, 3)
shape = SubResource("RectangleShape2D_s8lr2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(-1, -24)
scale = Vector2(1.5625, 1.51563)
sprite_frames = SubResource("SpriteFrames_se7i0")
animation = &"sleep"
frame_progress = 0.828388
flip_h = true

[node name="Detect_left" type="RayCast2D" parent="."]
position = Vector2(-7, -3)
target_position = Vector2(-13, 0)

[node name="Detect_right" type="RayCast2D" parent="."]
position = Vector2(7, -3)
target_position = Vector2(13, 0)

[connection signal="body_entered" from="Damage_hitbox" to="." method="_on_damage_hitbox_body_entered"]
[connection signal="body_entered" from="Kill_hitbox" to="." method="_on_kill_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
